eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 092356264921.dkr.ecr.eu-central-1.amazonaws.com/user-service:870c1a4e9ddadedfc50cf5398b0d0d4f54633abf
        ports:
        - containerPort: 8080
